--- a/packages/ui/.storybook/preview-body.html
+++ b/packages/ui/.storybook/preview-body.html
@@ -6,7 +6,7 @@
   }
 
   .sb-centered-layout {
-    height: 100vh;
+    height: -webkit-fill-available;
     width: 100%;
     display: flex;
     align-items: center;
